--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f8f0c31c-b240-4bff-a4ad-065cf7c91b17"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
